# scylla-api

./: README.md  data-scylla.nix  default.nix  scylla-api.cabal  scylla-api.nix
app/: Main.hs
src/Scylla/: Client.hs  Pretty.hs
src/Scylla/Client/: Config.hs  Types.hs  Websocket.hs
